new ui for onboarding & what do u wanna watch screen
new ui for onboarding &

--- a/7-11/711/manifest.json
+++ b/7-11/711/manifest.json
@@ -20,6 +20,10 @@
       {
         "resources": ["model_params.json"],
         "matches": ["https://www.youtube.com/*"]
+      },
+      {
+        "resources": ["assets/*"],
+        "matches": ["https://www.youtube.com/*"]
       }
     ]
 }
